--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CPACK_PACKAGE_VERSION "1.0.0")
 set(CPACK_PACKAGE_VERSION_MAJOR "1")
 set(CPACK_PACKAGE_VERSION_MINOR "0")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
-set(CPACK_RPM_PACKAGE_GROUP "eversoc")
+set(CPACK_RPM_PACKAGE_GROUP "octopus")
 set(CPACK_RPM_PACKAGE_URL "https://github.com/mgwang37/octopus")
 set(CPACK_RPM_PACKAGE_DESCRIPTION "a socks5 proxy")
 set(CPACK_PACKAGE_RELEASE 1)
